--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/Zhengxu_Xia.JPG" alt="" /></span>
 					<h1 id="logo"><a href="#">Zhengxu Xia</a></h1>
                     <p>Graduate Student<br />
                     Department of Computer Science<br \>
